fix: added normalize.css, moved bg gradient slightly down on smaller screens

--- a/styles/demoSection.module.scss
+++ b/styles/demoSection.module.scss
@@ -55,4 +55,9 @@
 
         margin-top: 2rem;
     }
+
+    .blur{
+        top: 10%;
+        height: 50%;
+    }
 }
