--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,6 +22,10 @@ strong {
     margin: 0.5rem 0;
 }
 
+sub {
+    text-decoration: none;
+}
+
 button a {
     text-decoration: none;
 }
