--- a/styles/infoSection.module.scss
+++ b/styles/infoSection.module.scss
@@ -57,6 +57,7 @@
         font-size: 90%;
         h1 {
             font-size: 1.5rem;
+            margin-top: 2rem;
             margin-bottom: 1rem;
         }
     }
